Fix state indicator being 4px too narrow.

--- a/app/assets/stylesheets/aasm_progressable.css.scss
+++ b/app/assets/stylesheets/aasm_progressable.css.scss
@@ -12,6 +12,10 @@
     display: table-cell;
     padding: 6px 16px;
     border-right: 4px solid #fff;
+
+    &:last-child {
+      border-right: none;
+    }
   }
   .complete {
     background: #6aa3d5;
